--- a/src/components/ToonList.module.css
+++ b/src/components/ToonList.module.css
@@ -1,6 +1,7 @@
 
 
 .list_box{
+    margin: 0;
     margin-top: 20px;
     position: relative;
     display: flex;
@@ -20,11 +21,29 @@
     width: 17%;
 }   
 
-.list_innerbox img {
+.list_innerbox_img {
+    position: relative;
     width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
 } 
 
 .list_innerbox p {
     margin: 0;
     padding: 0;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.button{
+    width: 2%;
+}
+
+.back_button{
+
+
+}
+
+.next_button{
+
 }
