--- a/src/components/Navbar_01.module.css
+++ b/src/components/Navbar_01.module.css
@@ -36,11 +36,11 @@ body{
     position: absolute;
     left: 54vw;
     width: 22vw;
-    top:4.7vh;
+    top: 50%;
     left: 57vw;
 
    
-    transform: translate(0,0);
+    transform: translate(0,-50%);
 }
 
 .rogo{
@@ -100,10 +100,11 @@ ul{
 
 
 .form1{
-    position: relative;
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 100%;
-        margin: 0;
+    margin: 0;
     padding: 0;
     
 }
@@ -117,7 +118,7 @@ ul{
     padding: 0;
     margin-right: 5px;
 
-    top: 50%;
+   
 
     background-color: #D9D9D9;
     box-sizing: border-box;
@@ -125,7 +126,7 @@ ul{
     border-radius: 5px;
 
 
-    transform: translate(0,-53%);
+   
 }
 
 .button1{
@@ -133,7 +134,6 @@ ul{
     height: 40px;
     width: 4vw;
 
-    top: 50%;
 
     box-sizing: border-box;
     border: 0px;
@@ -146,8 +146,17 @@ ul{
     font-weight: 900;
     text-align: center;
 
-    transform: translate(0,-50%);
+    
 
     cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+    color:black;
+
+}
+
+a:hover {
+    color: #649B77;
+}
