--- a/src/components/ToonList.module.css
+++ b/src/components/ToonList.module.css
@@ -7,10 +7,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
     width: 70%;
     left: 50%;
 
-    background-color: aqua;
+
 
     transform: translateX(-50%);
 }
@@ -32,11 +33,32 @@
     margin: 0;
     padding: 0;
     font-size: 1rem;
+    height: 21.6px;
     font-weight: 700;
+    
+    overflow: hidden;
+}
+
+.pagination{
+    position: absolute;
+    width: 20%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .button{
-    width: 2%;
+    position: relative;
+    border: 0;
+    box-sizing: border-box;
+    width: 30px;
+    height: 20px;
+    background-color: aquamarine;
+}
+.button:hover{
+    cursor: pointer;
 }
 
 .back_button{
@@ -46,4 +68,8 @@
 
 .next_button{
 
+}
+
+p {
+    margin: 0;
 }
