--- a/src/components/Navbar_01.module.css
+++ b/src/components/Navbar_01.module.css
@@ -139,7 +139,7 @@ ul{
     border: 0px;
     border-radius: 5px;
 
-    background-color: #649B77;
+    background-color: #5B8C4D;
     color: #fff;
     font-family: 'Work Sans';
     font-style: normal;
