--- a/src/components/ToonList.module.css
+++ b/src/components/ToonList.module.css
@@ -1,4 +1,30 @@
+.setList_box{   
+    margin-top:3% ;
+    position: relative;
+    width: 70%;
+   
+    display: flex;
+    flex-wrap: wrap;
+    align-content: 0;
+    justify-content:center;
+    align-items: center;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
+.setBar{
+    position: relative;
+    width: 60%;
+    height: 5ch;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-around;
+    box-sizing: border-box;
+    border: 2px black solid;
+    border-radius: 5px;
+   
+}
 
 .list_box{
     margin: 0;
@@ -9,6 +35,7 @@
     justify-content: space-around;
     align-items: center;
     width: 70%;
+    
     left: 50%;
 
 
@@ -18,13 +45,19 @@
 
 .list_innerbox{
     position: relative;
-    
     width: 17%;
 }   
 
+/* .list_imgbox{
+    width: 80%;
+    height: 26.2016vh;
+    display: flex;
+    background: linear-gradient(rgb(0, 0, 0), rgb(255, 255, 255));
+} */
+
 .list_innerbox_img {
     position: relative;
-    width: 80%;
+    width: 100%;
     left: 50%;
     transform: translateX(-50%);
 } 
@@ -72,4 +105,60 @@
 
 p {
     margin: 0;
+}
+
+.dayBtn{
+    position: relative;
+    width: 7%;
+    height: 60%;
+    cursor: pointer;
+   
+    /* border-top: 0.7 solid black;
+    border-bottom: 0.7 solid black; */
+    /* border-right: 0;
+    border-left: 0; */
+    border: 0;
+    box-sizing: border-box;
+    
+
+
+}
+.dayBtnOn{
+    position: relative;
+    width: 6.5%;
+    border: 0;
+    height: 65%;
+    background-color: #5B8C4D;
+    cursor: pointer;
+    color: #fff;
+}
+
+.serviceBtnN{
+    background-color: #2DB400;
+    cursor: pointer;
+}
+.serviceBtnK{
+    background-color: #F7E600;
+    cursor: pointer;
+}
+
+.dayPlusBtn{
+    position: relative;
+    width: 7.8%;
+    height: 60%;
+    cursor: pointer;
+    border: 0;
+    box-sizing: border-box;
+    
+
+
+}
+.dayPlusBtnOn{
+    position: relative;
+    width: 7.8%;
+    border: 0;
+    height: 65%;
+    background-color: #5B8C4D;
+    cursor: pointer;
+    color: #fff;
 }
